crates/gitea-core/src/error/snapshots/gitea_core__error__classify__tests__snapshot_422_message_envelope.snap
---
source: crates/gitea-core/src/error/classify.rs
expression: "rendered(422, &json(),\nbr#\"{\"message\":\"user does not exist [name: nope]\",\"url\":\"https://git.example.org/api/swagger\"}\"#,\n&ctx())"
---
error: the server rejected the values in this request (HTTP 422)

  request:     GET /api/v1/repos/perf3ct/gea/pulls/4212
  server says: user does not exist [name: nope]

what to do:
  correct the rejected values listed above.
  1. correct the values and retry
  2. gea raw search issue  (find the endpoint and its flags)
  note: the server may require a field that the API specification marks
        optional.
